--- a/app/src/main/res/layout/activity_dialog_view.xml
+++ b/app/src/main/res/layout/activity_dialog_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -14,6 +14,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:text="@string/text_on_the_background"
         android:textColor="@android:color/black"
-        android:textSize="18sp"/>
+        android:textSize="18sp" />
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
